[package]
authors = ["Centrifuge <admin@centrifuge.io>"]
description = 'Centrifuge Connectors Pallet'
edition = '2018'
license = "LGPL-3.0"
name = 'pallet-connectors'
repository = "https://github.com/centrifuge/centrifuge-chain"
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = 'parity-scale-codec', version = '3.0.0', features = ['derive'], default-features = false }
ethabi = { version = "16.0", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.33" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.33" }
hex = { version = "0.4.3", default_features = false }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, branch = "polkadot-v0.9.33" }
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.33" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.33" }

# Substrate crates
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.33" }

# Optional dependencies for benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.33" }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, optional = true, branch = "polkadot-v0.9.33" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.33" }
pallet-uniques = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.33" }

# Our custom pallets
cfg-primitives = { path = "../../libs/primitives", default-features = false }
cfg-traits = { path = "../../libs/traits", default-features = false }
cfg-types = { path = "../../libs/types", default-features = false }
cfg-utils = { path = "../../libs/utils", default-features = false }
runtime-common = { path = "../../runtime/common", default-features = false }

# Polkadot
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.33" }

pallet-ethereum = { git = "https://github.com/PureStake/frontier", default-features = false, branch = "moonbeam-polkadot-v0.9.32" }
pallet-ethereum-xcm = { git = "https://github.com/PureStake/moonbeam", default-features = false, rev = "621220fb0b7a491256b27d70c93ac507ba6519ce" }
pallet-xcm-transactor = { git = "https://github.com/PureStake/moonbeam", default-features = false, rev = "621220fb0b7a491256b27d70c93ac507ba6519ce" }
xcm-primitives = { git = "https://github.com/PureStake/moonbeam", default-features = false, rev = "621220fb0b7a491256b27d70c93ac507ba6519ce" }

[dev-dependencies]
hex = "0.4.3"
serde = { version = "1.0.102" }

# Our pallets
pallet-interest-accrual = { path = "../interest-accrual", default-features = true }
pallet-loans = { path = "../loans", default-features = true }
pallet-permissions = { path = "../permissions", default-features = true }
pallet-pool-system = { path = "../pool-system", default-features = true }

# Substrate crates & pallets
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = true, branch = "polkadot-v0.9.33" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = true, branch = "polkadot-v0.9.33" }
pallet-uniques = { git = "https://github.com/paritytech/substrate", default-features = true, branch = "polkadot-v0.9.33" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = true, branch = "polkadot-v0.9.33" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = true, branch = "polkadot-v0.9.33" }

# Orml crates
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = true, branch = "polkadot-v0.9.33" }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = true, branch = "polkadot-v0.9.33" }

# Local crates
runtime-common = { path = "../../runtime/common", default-features = true }

[features]
default = ['std']
runtime-benchmarks = [
  "frame-benchmarking",
  "pallet-balances",
  "orml-tokens",
]
std = [
  'codec/std',
  'cfg-types/std',
  'cfg-traits/std',
  'cfg-utils/std',
  'frame-support/std',
  'frame-system/std',
  'sp-std/std',
  'sp-runtime/std',
  'orml-tokens/std',
  'orml-traits/std',
  'pallet-balances/std',
  'runtime-common/std',
  'xcm/std',
  'pallet-xcm-transactor/std',
  'pallet-ethereum-xcm/std',
  'pallet-ethereum/std',
  'xcm-primitives/std',
  'ethabi/std',
  'pallet-interest-accrual/std',
  'pallet-permissions/std',
  'pallet-loans/std',
  'pallet-pool-system/std',
  'pallet-uniques/std',
]
