[package]
authors = ["Centrifuge <admin@centrifuge.io>"]
description = "Centrifuge Connectors Pallet"
edition = "2018"
license = "LGPL-3.0"
name = "pallet-connectors"
repository = "https://github.com/centrifuge/centrifuge-chain"
version = "0.0.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
ethabi = { version = "16.0", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
hex = { version = "0.4.3", default_features = false }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, branch = "polkadot-v0.9.37" }
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }

# Substrate crates
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }

# Optional dependencies for benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.37" }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, optional = true, branch = "polkadot-v0.9.37" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.37" }
pallet-uniques = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.37" }

# Our custom pallets
cfg-primitives = { path = "../../libs/primitives", default-features = false }
cfg-traits = { path = "../../libs/traits", default-features = false }
cfg-types = { path = "../../libs/types", default-features = false }
cfg-utils = { path = "../../libs/utils", default-features = false }

# Polkadot
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.37" }

pallet-ethereum = { git = "https://github.com/PureStake/frontier", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
fp-self-contained = { git = "https://github.com/PureStake/frontier", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }
pallet-xcm-transactor = { git = "https://github.com/PureStake/moonbeam", default-features = false, rev = "4c22f7c010573513076b618c09d2824ece6c51eb" }
xcm-primitives = { git = "https://github.com/PureStake/moonbeam", default-features = false, rev = "4c22f7c010573513076b618c09d2824ece6c51eb" }

[dev-dependencies]
hex = "0.4.3"
serde = { version = "1.0.102" }

# Our pallets
pallet-interest-accrual = { path = "../interest-accrual", default-features = true }
pallet-loans = { path = "../loans", default-features = true }
pallet-permissions = { path = "../permissions", default-features = true }
pallet-pool-system = { path = "../pool-system", default-features = true }

# Substrate crates & pallets
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = true, branch = "polkadot-v0.9.37" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = true, branch = "polkadot-v0.9.37" }
pallet-uniques = { git = "https://github.com/paritytech/substrate", default-features = true, branch = "polkadot-v0.9.37" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = true, branch = "polkadot-v0.9.37" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = true, branch = "polkadot-v0.9.37" }

# Orml crates
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = true, branch = "polkadot-v0.9.37" }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = true, branch = "polkadot-v0.9.37" }

# Local crates
runtime-common = { path = "../../runtime/common", default-features = true }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking",
  "pallet-balances",
  "orml-tokens",
  "cfg-primitives/runtime-benchmarks",
  "cfg-traits/runtime-benchmarks",
  "cfg-types/runtime-benchmarks",
  "cfg-utils/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "pallet-ethereum/runtime-benchmarks",
  "pallet-xcm-transactor/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "xcm/runtime-benchmarks",
  "xcm-primitives/runtime-benchmarks",
]
std = [
  "codec/std",
  "cfg-types/std",
  "cfg-traits/std",
  "cfg-utils/std",
  "frame-support/std",
  "frame-system/std",
  "sp-std/std",
  "sp-runtime/std",
  "orml-tokens/std",
  "orml-traits/std",
  "pallet-balances/std",
  "runtime-common/std",
  "xcm/std",
  "pallet-xcm-transactor/std",
  "pallet-ethereum/std",
  "xcm-primitives/std",
  "ethabi/std",
  "pallet-interest-accrual/std",
  "pallet-permissions/std",
  "pallet-loans/std",
  "pallet-pool-system/std",
  "pallet-uniques/std",
  "cfg-primitives/std",
  "frame-benchmarking/std",
  "scale-info/std",
]
try-runtime = [
  "cfg-primitives/try-runtime",
  "cfg-traits/try-runtime",
  "frame-support/try-runtime",
  "cfg-primitives/try-runtime",
  "cfg-traits/try-runtime",
  "cfg-types/try-runtime",
  "cfg-utils/try-runtime",
  "frame-system/try-runtime",
  "pallet-ethereum/try-runtime",
  "pallet-xcm-transactor/try-runtime",
  "fp-self-contained/try-runtime",
]
