[package]
name = "pallet-crowdloan-claim"
description = "Module for processing crowdloan claim rewards."
authors = ["The Centrifugians Tribe"]
edition = "2021"
homepage = "https://centrifuge.io"
license = "LGPL-3.0"
repository = "https://github.com/centrifuge/centrifuge-chain"
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# General dependencies
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

# Substrate dependencies
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# optional dependencies for benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, optional = true, tag = "polkadot-v1.1.0" }

# Local dependencies
cfg-traits = { path = "../../libs/traits", default_features = false }
cfg-types = { path = "../../libs/types", default-features = false }
proofs = { path = "../../libs/proofs", default_features = false }

[dev-dependencies]
hex = { version = "0.4.3", default_features = true }
pallet-crowdloan-reward = { path = "../crowdloan-reward", default_features = true }
pallet-vesting = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
sp-keyring = { workspace = true, default-features = true }
sp-trie = { workspace = true, default-features = true }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "cfg-traits/runtime-benchmarks",
  "cfg-types/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
std = [
  "parity-scale-codec/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-balances/std",
  "sp-std/std",
  "cfg-traits/std",
  "proofs/std",
  "cfg-types/std",
  "frame-benchmarking/std",
  "scale-info/std",
  "sp-core/std",
  "sp-runtime/std",
]
try-runtime = [
  "cfg-traits/try-runtime",
  "frame-support/try-runtime",
  "cfg-types/try-runtime",
  "frame-system/try-runtime",
  "pallet-balances/try-runtime",
  "sp-runtime/try-runtime",
]
