[package]
name = "pallet-crowdloan-claim"
description = "Module for processing crowdloan claim rewards."
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# General dependencies
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

# Substrate dependencies
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# optional dependencies for benchmarking
frame-benchmarking = { workspace = true, optional = true }

# Local dependencies
cfg-traits = { workspace = true }
cfg-types = { workspace = true }
proofs = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
pallet-crowdloan-reward = { workspace = true }
pallet-vesting = { workspace = true, default-features = true }
sp-keyring = { workspace = true, default-features = true }
sp-trie = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
  "parity-scale-codec/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-balances/std",
  "sp-std/std",
  "cfg-traits/std",
  "proofs/std",
  "cfg-types/std",
  "frame-benchmarking/std",
  "scale-info/std",
  "sp-core/std",
  "sp-runtime/std",
]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "cfg-traits/runtime-benchmarks",
  "cfg-types/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
try-runtime = [
  "cfg-traits/try-runtime",
  "frame-support/try-runtime",
  "cfg-types/try-runtime",
  "frame-system/try-runtime",
  "pallet-balances/try-runtime",
  "sp-runtime/try-runtime",
]
